Dont restrict height of footer Prevents padding from creating a gap between the footer and the bottom of the page

--- a/home/static/css/base.css
+++ b/home/static/css/base.css
@@ -50,7 +50,7 @@ main {
 }
 
 footer {
-    height: 14.5vh;
+    min-height: 14.5vh;
     background-color: var(--color-green);
     padding: 0.7rem;
     color: var(--color-gold);
